--- a/news24-houre.html
+++ b/news24-houre.html
@@ -75,7 +75,7 @@
             <i class="fa-solid fa-bars" onclick="showmenu()"></i>
         </nav>
         <div class="container">
-            <p id="'input-id'" class="pss container py-2 text-center" type="text " placeholder="4 iteam found"> 8 iteam</p>
+            <p  class="pss container py-2 text-center" type="text " placeholder="4 iteam found">Today <span id="input-id" class="text-primary fs-5" ></span> Total Update News !!</p>
         </div>
     </section>
 
