--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </nav>
         <div class="container">
             <p class="pss container py-2 text-center" type="text " placeholder="4 iteam found">Today <span id="input-id"
-                    class="text-primary fs-5"></span> Total Update News !!</p>
+                    class="text-primary "></span> News !!</p>
         </div>
     </section>
 
@@ -138,7 +138,7 @@
 
 
     <!-- ----------------Loading...spiner ------------------ -->
- <section class="d-none" id="loder">
+ <section class="" id="loder">
     <div class="d-flex justify-content-center align-items-center ">
         <div class="spinner-border mt-5" role="status">
             <span class="visually-hidden ">Loading...</span>
