--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <header>
         <nav id="nav-01" class="navbar bg-light">
             <div class="container">
-                <a class="navbar-brand"><span class="logo-style">News-24</span>Houre</a>
+                <a class="logo-style"><span class="navbar-brand">Today</span>News-24</a>
                 <ul class="">
                     <a class="mx-2" href="">Home</a>
-                    <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop" href="">Block</a>
+                    <a class="bg-primary px-4 py-2 text-white" data-bs-toggle="modal" data-bs-target="#staticBackdrop" href="">Block</a>
                     <img class="myimage" src="img/round-gradient-designify.png" alt="">
                 </ul>
 
