--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>News-24 Houre</title>
+    <title>BBC News</title>
     <!-- ----------------------Bootstrap link------------------------- -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -25,7 +25,7 @@
     <header>
         <nav id="nav-01" class="navbar bg-light">
             <div class="container">
-                <a class="logo-style"><span class="navbar-brand">Today</span>News-24</a>
+                <a class="navbar-brand"><span class="logo-style ">BBC</span>news</a>
                 <ul class="">
                     <a class="mx-2" href="">Home</a>
                     <a class="bg-primary px-4 py-2 text-white" data-bs-toggle="modal" data-bs-target="#staticBackdrop" href="">Block</a>
