--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- ---------------------css link--------------- -->
     <link rel="stylesheet" href="news24-houre.css">
+
+    <link rel="shortcut icon" href="img/round-gradient-designify.png" type="image/x-icon">
 </head>
 
 <body class="bg-light">
