--- a/index.html
+++ b/index.html
@@ -17,20 +17,26 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- ---------------------css link--------------- -->
-    <link rel="stylesheet" href="news24-houre.css">
+
+    <link rel="stylesheet" href="bbc-news.css">
+    <!-- --------------------------name icon------------------ -->
 
     <link rel="shortcut icon" href="img/round-gradient-designify.png" type="image/x-icon">
+
 </head>
 
 <body class="bg-light">
+    <!-- --------------------header start-------------------- -->
     <header>
         <nav id="nav-01" class="navbar bg-light">
             <div class="container">
                 <a class="navbar-brand"><span class="logo-style ">BBC</span>news</a>
                 <ul class="">
                     <a class="mx-2" href="">Home</a>
-                    <a class="bg-primary px-4 py-2 text-white" data-bs-toggle="modal" data-bs-target="#staticBackdrop" href="">Block</a>
+                    <a class="bg-primary px-4 py-2 text-white" data-bs-toggle="modal" data-bs-target="#staticBackdrop"
+                        href="">Block</a>
                     <img class="myimage" src="img/round-gradient-designify.png" alt="">
                 </ul>
 
@@ -51,57 +57,78 @@
                             <div class="accordion" id="accordionExample">
                                 <div class="accordion-item">
                                     <h2 class="accordion-header" id="headingOne">
-                                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
-                                            aria-expanded="true" aria-controls="collapseOne">
+                                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                            data-bs-target="#collapseOne" aria-expanded="true"
+                                            aria-controls="collapseOne">
                                             Question: 01.
                                         </button>
                                     </h2>
-                                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
-                                        data-bs-parent="#accordionExample">
+                                    <div id="collapseOne" class="accordion-collapse collapse show"
+                                        aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                                         <div class="accordion-body">
-                                         <strong>#Var : The scope of a var variable is functional scope. var  is global variable.Do not use var</strong> 
-                                        <strong> #Let : The scope of a let variable is block scope. Othere time let variable Can be changed value later.</strong>
-                                        <strong> #Const :The scope of a const variable is block scope.Othere time let variable Can't be changed value later.<br> <code>Thank you My dear web-codding Master</code>
+                                            <strong>#Var : The scope of a var variable is functional scope. var is
+                                                global variable.Do not use var</strong>
+                                            <strong> #Let : The scope of a let variable is block scope. Othere time let
+                                                variable Can be changed value later.</strong>
+                                            <strong> #Const :The scope of a const variable is block scope.Othere time
+                                                let variable Can't be changed value later.<br>
+                                                <code>Thank you My dear web-codding Master</code>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="accordion-item">
                                     <h2 class="accordion-header" id="headingTwo">
-                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                            data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                        <button class="accordion-button collapsed" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#collapseTwo"
+                                            aria-expanded="false" aria-controls="collapseTwo">
                                             Question: 02.
                                         </button>
                                     </h2>
-                                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
-                                        data-bs-parent="#accordionExample">
+                                    <div id="collapseTwo" class="accordion-collapse collapse"
+                                        aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                                         <div class="accordion-body">
-                                        <strong>#Regular Function : Regular functions created using function declarations or expressions are constructible and callable. Since regular
-                                        functions are constructible, they can be called using the new keyword. However, the arrow functions are only callable
-                                        and not constructible, i.e arrow functions can never be used as constructor functions.</strong><br> <br><br>
-                                        <strong> #Arrow Function : Arrow functions are a new way to write anonymous function expressions, and are similar to lambda functions in some other
-                                        programming languages, such as Python. Arrow functions differ from traditional functions in a number of ways, including
-                                        the way their scope is determined and how their syntax is expressed <br><code>Thank you My dear web-codding Master</code>.
+                                            <strong>#Regular Function : Regular functions created using function
+                                                declarations or expressions are constructible and callable. Since
+                                                regular
+                                                functions are constructible, they can be called using the new keyword.
+                                                However, the arrow functions are only callable
+                                                and not constructible, i.e arrow functions can never be used as
+                                                constructor functions.</strong><br> <br><br>
+                                            <strong> #Arrow Function : Arrow functions are a new way to write anonymous
+                                                function expressions, and are similar to lambda functions in some other
+                                                programming languages, such as Python. Arrow functions differ from
+                                                traditional functions in a number of ways, including
+                                                the way their scope is determined and how their syntax is expressed
+                                                <br><code>Thank you My dear web-codding Master</code>.
                                         </div>
                                     </div>
                                 </div>
                                 <div class="accordion-item">
                                     <h2 class="accordion-header" id="headingThree">
-                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                        <button class="accordion-button collapsed" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#collapseThree"
+                                            aria-expanded="false" aria-controls="collapseThree">
                                             Question: 03.
                                         </button>
                                     </h2>
-                                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
-                                        data-bs-parent="#accordionExample">
+                                    <div id="collapseThree" class="accordion-collapse collapse"
+                                        aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                                         <div class="accordion-body">
-                                            <strong>#.map() : .map() is key-value pairs in which values of any type can be used as either keys or values. A Map object
-                                            always remembers the actual insertion order of the keys. Keys and values in a Map object may be primitive or objects. It
-                                            returns the new or empty Map.</strong><br><br>
-                                            <strong> #.filter() : The filter() method creates a new array filled with elements that pass a test provided by a function. The filter()
-                                            method does not execute the function for empty elements. The filter() method does not change the original array.</strong><br><br>
-                                            <strong> #.find() :The find() method returns the value of the first element that passes a test. The find() method executes a function for
-                                            each array element. The find() method returns undefined if no elements are found. The find() method does not execute the
-                                            function for empty elements.</strong><code>Thank you My dear web-codding Master !</code>
+                                            <strong>#.map() : .map() is key-value pairs in which values of any type can
+                                                be used as either keys or values. A Map object
+                                                always remembers the actual insertion order of the keys. Keys and values
+                                                in a Map object may be primitive or objects. It
+                                                returns the new or empty Map.</strong><br><br>
+                                            <strong> #.filter() : The filter() method creates a new array filled with
+                                                elements that pass a test provided by a function. The filter()
+                                                method does not execute the function for empty elements. The filter()
+                                                method does not change the original array.</strong><br><br>
+                                            <strong> #.find() :The find() method returns the value of the first element
+                                                that passes a test. The find() method executes a function for
+                                                each array element. The find() method returns undefined if no elements
+                                                are found. The find() method does not execute the
+                                                function for empty
+                                                elements.</strong><code>Thank you My dear web-codding Master !</code>
                                         </div>
                                     </div>
                                 </div>
@@ -119,13 +146,17 @@
         </div>
 
     </header>
-    <!-- -------------------all category container section------------ -->
+
+    <!-- ---------------------header end---------------------------- -->
+
+    <!-- -------------------all category container navbar section-------------->
+
     <section class="container">
         <nav id="topnav">
             <div class="nav-links" id="nav-links">
                 <i class="fa-solid fa-xmark text-white" onclick="hidemenu()"></i>
                 <ul id="ul-container">
-
+                    <!-- display in nav iteam -->
                 </ul>
             </div>
             <i class="fa-solid fa-bars" onclick="showmenu()"></i>
@@ -139,15 +170,18 @@
     <!-- --------------------loading News Page update section------------------- -->
 
 
-    <!-- ----------------Loading...spiner ------------------ -->
- <section class="" id="loder">
-    <div class="d-flex justify-content-center align-items-center ">
-        <div class="spinner-border mt-5" role="status">
-            <span class="visually-hidden ">Loading...</span>
+    <!-- ----------------Loading icon...spiner start ------------------ -->
+    <section class="" id="loder">
+        <div class="d-flex justify-content-center align-items-center ">
+            <div class="spinner-border mt-5" role="status">
+                <span class="visually-hidden ">Loading...</span>
+            </div>
         </div>
-    </div>
- </section>
+    </section>
 
+    <!-- ----------------Loading icon...spiner end ------------------ -->
+
+    <!-- ----------------- uplode new BBC today start---------------------- -->
     <section class="loading-News mt-5">
 
         <div id="loading-news-container" class="container ">
@@ -156,9 +190,9 @@
         </div>
 
     </section>
+    <!-- ----------------- uplode new BBC today end---------------------- -->
 
-    <!-- ------------------click modal section ---------------- -->
-
+    <!-- ------------------click modal section start---------------- -->
     <section>
         <!-- Modal btn -->
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -177,16 +211,15 @@
         </div>
     </section>
 
+    <!-- -------------------modal section end------------------------ -->
 
-
-
+    <!-- --------------------------------bootstrap js cdn------------------------------- -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
 
     <!-- --------------------js file link----------------------- -->
     <script src="js/news-nav-or-display_news.js"></script>
-    <script src="js/length-aleart-etc.js"></script>
 </body>
 
 </html>
